--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 *.user
 *.userosscache
 *.sln.docstates
-
+AplicacionMultifuncion.rar
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
